src/snapshots/green_tea__error__test__error_duplicate_with.snap
---
source: src/error.rs
expression: "{> with name as String\n{> with name as String\nHello"
---
This is declared in more than one 'with' statement: name

error: 
  ┌─ -test-:2:9
  │
2 │ {> with name as String
  │         ^^^^


